--- a/To_Do_List/index.html
+++ b/To_Do_List/index.html
@@ -9,6 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300&family=Nosifer&family=Press+Start+2P&display=swap');
     </style>
+    <script src="script.js" defer></script>
     <title>To_Do_List</title>
 </head>
 
@@ -24,8 +25,8 @@
             </section>
             <section class="needTodo">
                 <h2>Tasks</h2>
-                <input type="text">
-                <button class="delete">Delete</button>
+                <!-- <input type="text">
+                <button class="delete">Delete</button> -->
             </section>
         </div>
     </main>
