--- a/To_Do_List/index.html
+++ b/To_Do_List/index.html
@@ -23,10 +23,14 @@
                 <input class="task" type="text" placeholder="What do you have planned?">
                 <button class="add" type="submit">Add</button>
             </section>
-            <section class="needTodo">
-                <h2>Tasks</h2>
-                <!-- <input type="text">
-                <button class="delete">Delete</button> -->
+            <h2>Tasks</h2>
+            <section class="needTodo"> 
+                <div class="todo">
+                    <div class="do">
+                        <input class="required" type="text">
+                        <button class="delete">Delete</button>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
