--- a/To_Do_List/index.html
+++ b/To_Do_List/index.html
@@ -25,12 +25,12 @@
             </section>
             <h2>Tasks</h2>
             <section class="needTodo"> 
-                <div class="todo">
+                <!-- <div class="todo">
                     <div class="do">
                         <input class="required" type="text">
                         <button class="delete">Delete</button>
                     </div>
-                </div>
+                </div> -->
             </section>
         </div>
     </main>
